--- a/app/views/layout/user-layout.hbs
+++ b/app/views/layout/user-layout.hbs
@@ -136,8 +136,10 @@
 								</a>
 
 								{{!-- Wishlist Icon --}}
-								<a href="/wishlist" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+								<a href="/wishlist" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify='{{wishlistCount}}'>
+
 									<i class="zmdi zmdi-favorite-outline"></i>
+									
 								</a>
 
 							{{/if}}
