--- a/app/views/user/manage-wishlist.hbs
+++ b/app/views/user/manage-wishlist.hbs
@@ -164,40 +164,56 @@
 
                     <div class="d-style btn btn-brc-tp border-2 bgc-white btn-outline-blue btn-h-outline-blue btn-a-outline-blue w-100 my-2 py-3 shadow-sm">
 
-                        <!-- ================================= Single Item ================================= -->
-                        <div class="row align-items-center">
+                        {{#if userWishlistData}}
+
+                            <!-- ================================= Single Item ================================= -->
+                            {{#each userWishlistData}}
+
+                                <div class="row align-items-center">
 
 
-                            <div class="col-12 col-md-4">
-                                <h4 class="pt-3 text-170 text-600 text-primary-d1 letter-spacing">
-                                    Product image
-                                </h4>
-        
-                                <div class="text-secondary-d1 text-120">
-                                    Product Name
+                                    <div class="col-12 col-md-4">
+
+                                        <img src="/product-images/{{this._id}}.jpg" style="height:15rem; width:15rem;" alt="IMG-PRODUCT">
+                
+                                        <div class="text-secondary-d1 text-120">
+                                            {{this.name}}
+                                        </div>
+
+                                    </div>
+                
+                                    <ul class="list-unstyled mb-0 col-12 col-md-4 text-dark-l1 text-90 text-left my-4 my-md-0">
+
+                                        <li>
+                                            <i class="fa fa-check text-success-m2 text-110 mr-2 mt-1"></i>
+                                            <span>
+                                                <span class="text-110">{{this.description}}</span>
+                                                {{this.price}}
+                                            </span>
+                                        </li>
+                
+                                    </ul>
+
+                                    {{!-- =========== Buttons=========== --}}
+                                    <div class="col-12 col-md-4 text-center">
+                                        <a href="#" class="f-n-hover btn btn-success btn-raised px-4 py-25 w-20 text-600" onclick="addToCart('{{this._id}}', '{{this.name}}'); return false;" >Add to cart</a>
+                                        <a href="#" class="f-n-hover btn btn-danger btn-raised px-4 py-25 w-20 text-600" onclick="modifyWishListFromWishlistPage('{{this._id}}'); return false;" >Remove</a>
+                                    </div>
+
+
                                 </div>
-                            </div>
-        
-                            <ul class="list-unstyled mb-0 col-12 col-md-4 text-dark-l1 text-90 text-left my-4 my-md-0">
 
-                                <li>
-                                    <i class="fa fa-check text-success-m2 text-110 mr-2 mt-1"></i>
-                                    <span>
-                                        <span class="text-110">Product Description</span>
-                                        Product Price
-                                    </span>
-                                </li>
-        
-                            </ul>
+                            {{/each}}
 
-                            {{!-- =========== Buttons=========== --}}
-                            <div class="col-12 col-md-4 text-center">
-                                <a href="#" class="f-n-hover btn btn-success btn-raised px-4 py-25 w-20 text-600">Add to cart</a>
-                                <a href="#" class="f-n-hover btn btn-danger btn-raised px-4 py-25 w-20 text-600">Remove</a>
+                        {{else}}
+
+                            <div style="padding-top: 100px; padding-bottom: 100px;">
+
+                                <h2 style="color: #6d62b5;">Your wishlist is Empty!</h2>
+
                             </div>
 
-
-                        </div>
+                        {{/if}}
         
                     </div>
            
