Added wish list count inside the profile page card

--- a/app/views/user/user-profile.hbs
+++ b/app/views/user/user-profile.hbs
@@ -2079,7 +2079,7 @@
                                             <span class="description">CartItems</span>
                                         </div>
                                         <div>
-                                            <span class="heading">20</span>
+                                            <span class="heading">{{wishlistCount}}</span>
                                             <span class="description">Wishlist</span>
                                         </div>
                                         <div>
