--- a/app/views/user/orders.hbs
+++ b/app/views/user/orders.hbs
@@ -1,6 +1,6 @@
 {{!-- ==============================Past Orders Page============================== --}}
 
-<div style="display: flex; justify-content: center; padding-top: 40px ; height: 100vh; margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5;">
+<div style="display: flex; justify-content: center; padding-top: 100px ; padding-bottom: 50px ; height: 100vh; margin: 0; font-family: Arial, sans-serif; background-color: #f5f5f5;">
 
     <div style="width: 95%; background-color: #fff; padding: 20px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);">
 
