--- a/app/views/user/login.hbs
+++ b/app/views/user/login.hbs
@@ -102,7 +102,7 @@
     }
 </style>
 
-<div class="container mt-5">
+<div class="container mt-5" style="padding-top: 150px ; padding-bottom: 125px ;">
     <h2 style="text-align: center;">Login/Sign up</h2>
     <form id="login-form" style="max-width: 500px; margin: 0 auto;" action="/login" method="post">
         <div class="mb-3">
