Order Succes And Failed page padding configured

--- a/app/views/user/order-failed.hbs
+++ b/app/views/user/order-failed.hbs
@@ -1,6 +1,6 @@
 <!-- Order Failed Page -->
 
-<div class="container" style="height: 100vh; display: flex; align-items: center; justify-content: center;">
+<div class="container" style="height: 100vh; display: flex; align-items: center; justify-content: center; padding-top: 100px ;">
   <div class="row">
     <div class="col-md-12 d-flex align-items-center justify-content-center vh-100">
       <div class="text-center">
@@ -8,7 +8,7 @@
         <p class="animate__animated animate__fadeIn" style="animation-duration: 1s; animation-delay: 0.5s;">We apologize for the inconvenience. Your order was not procced due to an error.</p>
         <div class="mt-4">
           <a href="/" class="btn btn-primary animate__animated animate__fadeInLeft" style="animation-duration: 1s; animation-delay: 1s; margin-top: 10px; margin-right: 10px;">Go to Home</a>
-          <a href="/orders" class="btn btn-secondary animate__animated animate__fadeInRight" style="animation-duration: 1s; animation-delay: 1s; margin-top: 10px; margin-right: 10px;">Check Orders</a>
+          <a href="/orders" class="btn btn-warning animate__animated animate__fadeInRight" style="animation-duration: 1s; animation-delay: 1s; margin-top: 10px; margin-right: 10px;">Check Orders</a>
         </div>
       </div>
     </div>
