--- a/app/views/user/order-success.hbs
+++ b/app/views/user/order-success.hbs
@@ -1,13 +1,13 @@
 <!-- Order Placed Page -->
-<div class="container">
+<div class="container" style="padding-top: 300px ; padding-bottom: 80px ;">
   <div class="row">
     <div class="col-md-12 d-flex align-items-center justify-content-center vh-100">
       <div class="text-center">
-        <h2 class="animate__animated animate__bounceInDown">Order Placed Successfully!</h2>
+        <h2 class="animate__animated animate__bounceInDown" style="color: green;">Order Placed Successfully!</h2>
         <p class="animate__animated animate__fadeIn">Thank you for your order. We have received your order and it is being processed.</p>
         <div class="mt-4">
           <a href="/" class="btn btn-primary animate__animated animate__fadeInLeft">Go to Home</a>
-          <a href="/orders" class="btn btn-secondary animate__animated animate__fadeInRight">View Orders</a>
+          <a href="/orders" class="btn btn-secondary animate__animated animate__fadeInRight btn-success">View Orders</a>
         </div>
       </div>
     </div>
