Sign-up page padding configured

--- a/app/views/user/signup.hbs
+++ b/app/views/user/signup.hbs
@@ -101,7 +101,7 @@
 </style>
 
 
-<div class="container mt-5">
+<div class="container mt-5" style="padding-top: 100px ; padding-bottom: 50px ;">
     <h2 style="text-align: center;">Create an account</h2>
     <form id="signup-form" style="max-width: 500px; margin: 0 auto;" action="/signup" method="POST">
         <div class="mb-3">
