Configured Admin Dashboard
Configured:

# Side panel
# Top panel

--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -60,55 +60,72 @@
                     
                     <a href="/admin" class="navbar-brand mx-4 mb-3">
 
-                        <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>Admin</h3>
+                        <h5 class="text-primary"><i class="fas fa-user-shield me-2"></i>{{PLATFORM_NAME}}'s Admin</h5>
 
                     </a>
 
                     <div class="d-flex align-items-center ms-4 mb-4">
                         <div class="position-relative">
-                            <img class="rounded-circle" src="/admin-resources/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                            <i class="fas fa-user-shield me-2"></i>
                             <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                         </div>
                         <div class="ms-3">
-                            <h6 class="mb-0">Jhon Doe</h6>
-                            <span>Admin</span>
+                            <h6 class="mb-0"> {{adminData.name}} </h6>
+                            <span> {{PLATFORM_NAME}} Admin</span>
                         </div>
                     </div>
 
                     <div class="navbar-nav w-100">
 
-                        <a href="index.html" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
+                        <a href="/admin" class="nav-item nav-link active"><i class="fa fa-tachometer-alt me-2"></i>Dashboard</a>
 
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-cart-plus me-2"></i>Products</a>
                             <div class="dropdown-menu bg-transparent border-0">
-                                <a href="button.html" class="dropdown-item">Buttons</a>
-                                <a href="typography.html" class="dropdown-item">Typography</a>
-                                <a href="element.html" class="dropdown-item">Other Elements</a>
+                                <a href="/admin/manage-products" class="dropdown-item">Manage Product</a>
+                                <a href="/admin/add-product" class="dropdown-item">Add Product</a>
+                            </div>
+                        </div>
+                        
+
+                        <div class="nav-item dropdown">
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-table me-2"></i>Categories</a>
+                            <div class="dropdown-menu bg-transparent border-0">
+                                <a href="/admin/manage-product-categories" class="dropdown-item">Manage Category</a>
+                                <a href="/admin/add-new-product-category" class="dropdown-item">Add Category</a>
                             </div>
                         </div>
 
-                        <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a>
-                        <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
-                        <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
-                        <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a>
 
                         <div class="nav-item dropdown">
-
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-chart-line me-2"></i>Orders</a>
                             <div class="dropdown-menu bg-transparent border-0">
-
-                                <a href="signin.html" class="dropdown-item">Sign In</a>
-
-                                <a href="signup.html" class="dropdown-item">Sign Up</a>
-
-                                <a href="404.html" class="dropdown-item">404 Error</a>
-
-                                <a href="blank.html" class="dropdown-item">Blank Page</a>
-
+                                <a href="/admin/order-summary" class="dropdown-item">Manage Orders</a>
                             </div>
+                        </div>
 
+
+                        <div class="nav-item dropdown">
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-users me-2"></i>Users</a>
+                            <div class="dropdown-menu bg-transparent border-0">
+                                <a href="/admin/manage-users" class="dropdown-item">Manage Users</a>
+                            </div>
+                        </div>
+
+
+                        <div class="nav-item dropdown">
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-address-card me-2"></i>Vendors</a>
+                            <div class="dropdown-menu bg-transparent border-0">
+                                <a href="/admin" class="dropdown-item">Manage Vendors</a>
+                            </div>
+                        </div>
+
+
+                        <div class="nav-item dropdown">
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-user-shield me-2"></i>Admins</a>
+                            <div class="dropdown-menu bg-transparent border-0">
+                                <a href="/admin/add-admin" class="dropdown-item">Add Admin</a>
+                            </div>
                         </div>
 
                     </div>
@@ -199,16 +216,37 @@
                                 <a href="#" class="dropdown-item text-center">See all notifications</a>
                             </div>
                         </div>
+
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                                <img class="rounded-circle me-lg-2" src="/admin-resources/img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                                <span class="d-none d-lg-inline-flex">John Doe</span>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                                <a href="#" class="dropdown-item">My Profile</a>
-                                <a href="#" class="dropdown-item">Settings</a>
-                                <a href="#" class="dropdown-item">Log Out</a>
-                            </div>
+
+                            {{#if adminData}}
+
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+                                    <img class="rounded-circle me-lg-2" src="/admin-resources/img/user.jpg" alt="" style="width: 40px; height: 40px;">
+                                    <span class="d-none d-lg-inline-flex">{{adminData.name}}</span>
+                                </a>
+
+                                <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
+
+                                    <a href="/admin/" class="dropdown-item">My Profile</a>
+
+                                    <form action="/admin/logout" method="POST" class="dropdown-item">
+
+                                        <input type="hidden" name="_method" value="POST">
+
+                                        <button type="submit" class="btn btn-link">Log Out</button>
+
+                                    </form>
+
+                                </div>
+
+                            {{else}}
+
+                                <a href="/admin/login" class="dropdown-item">Login</a>
+
+                            {{/if}}
+
+
                         </div>
                     </div>
                 </nav>
