--- a/app/views/admin/add-admin.hbs
+++ b/app/views/admin/add-admin.hbs
@@ -3,8 +3,8 @@
     <h1>Add Admin</h1>
     <form id="add-admin-form" action="/admin/add-admin" method="POST">
       <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" class="form-control" id="username" name="username" required>
+        <label for="username">name:</label>
+        <input type="text" class="form-control" id="name" name="name" required>
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
