Modified user profile page route
Modified user profile page route

# Used userName for get request

# Added new user helper to get userData using userName

--- a/app/views/layout/user-layout.hbs
+++ b/app/views/layout/user-layout.hbs
@@ -152,7 +152,7 @@
 
 										{{#if user}}
 
-											<button onclick="window.location.href='/profile/{{user._id}}';"><i><b>Hey, {{user.name}}</b></i></button>
+											<button onclick="window.location.href='/profile/{{user.userName}}';"><i><b>Hey, {{user.name}}</b></i></button>
 
 										{{else}}
 											
