Configured Admin layout to manage coupons from side-panel

--- a/app/views/layout/admin-layout.hbs
+++ b/app/views/layout/admin-layout.hbs
@@ -114,6 +114,23 @@
 
 
                         <div class="nav-item dropdown">
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-money-check-alt me-2"></i>Coupons</a>
+                            <div class="dropdown-menu bg-transparent border-0">
+                                <a href="/admin/manage-coupons" class="dropdown-item">Manage Coupons</a>
+                                <a href="/admin/add-coupon" class="dropdown-item">Add Coupon</a>
+                            </div>
+                        </div>
+
+
+                        <div class="nav-item dropdown">
+                            <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-comment-dollar me-2"></i>Offers</a>
+                            <div class="dropdown-menu bg-transparent border-0">
+                                <a href="/admin/manage-offers" class="dropdown-item">Manage Offers</a>
+                            </div>
+                        </div>
+
+
+                        <div class="nav-item dropdown">
                             <a href="/admin" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fas fa-address-card me-2"></i>Vendors</a>
                             <div class="dropdown-menu bg-transparent border-0">
                                 <a href="/admin" class="dropdown-item">Manage Vendors</a>
