--- a/app/views/admin/coupon-add.hbs
+++ b/app/views/admin/coupon-add.hbs
@@ -2,38 +2,68 @@
     
   <div class="container">
 
-    <h1>Add Product Category</h1>
+    <h1>Add Coupon</h1>
 
-    <form id="add-product-category-form" action="/admin/add-new-product-category" method="POST" enctype="multipart/form-data">
-      {{#if categoryExistsErr}}
+
+    {{!-- ==================================================== Add Coupon Form ==================================================== --}}
+
+    <form id="add-coupon-form" action="/admin/add-coupon" method="POST">
+
+      <div class="form-group">
+        <label for="category Id">Coupon Code</label>
+        <div class="input-group">
+          <input type="text" class="form-control" id="couponCode" name="couponCode" required>
+        </div>
+      </div>
+
+      {{#if couponExistError}}
       <div>
-        <p style="color: red;">{{categoryExistsErr}}</p>
+        <p style="color: red;">{{couponExistError}}</p>
       </div>
       {{/if}}
+
       <div class="form-group">
-        <label for="category Id">Category Id:</label>
+        <label for="Coupon description">Coupon Description:</label>
+        <textarea class="form-control" id="couponDescription" name="couponDescription" rows="5" required></textarea>
+      </div>
+
+      <div class="form-group">
+        <label for="Discount percentage">Discount percentage:</label>
         <div class="input-group">
-          <input type="number" class="form-control" id="id" name="categoryId" min="0" step="1" required>
+          <input type="number" class="form-control" id="discountPercentage" name="discountPercentage" min="0" max="100" step="1" required>
         </div>
       </div>
+
       <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" class="form-control" id="name" name="name" required>
-      </div>
-      <div class="form-group">
-        <label for="description">Description:</label>
-        <textarea class="form-control" id="description" name="description" rows="5" required></textarea>
-      </div>
-      <div class="form-group">
-        <label for="image">Image:</label>
-        <div class="custom-file">
-          <input type="file" class="custom-file-input" id="image" name="category-image" accept="image/*" required>
-          <label class="custom-file-label" for="image">Choose file</label>
+        <label for="Max discount">Max discount Amount: </label>
+        <div class="input-group">
+          <input type="number" class="form-control" id="maxDiscountAmount" name="maxDiscountAmount" min="0" step="1" required>
         </div>
-        <div id="image-preview" class="mt-2"></div>
       </div>
-      <button type="submit" class="btn btn-primary">Add Product</button>
+
+      <div class="form-group">
+        <label for="Min order value">Min order value: </label>
+        <div class="input-group">
+          <input type="number" class="form-control" id="minOrderValue" name="minOrderValue" min="0" step="1" required>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="Valid For">Valid For:</label>
+        <div class="input-group">
+          <input type="number" class="form-control" id="validFor" name="validFor" min="1" max="180" step="1" placeholder="Number of days for which coupon is valid" required>
+        </div>
+      </div>
+
+      <br>
+
+      
+      {{!-- ========================== Form Submission Button ========================== --}}
+
+      <button type="submit" class="btn btn-primary">Add Coupon</button>
       <button type="reset" class="btn btn-secondary ml-2">Reset</button>
+
+
     </form>
 
   </div>
